--- a/package.json
+++ b/package.json
@@ -6,36 +6,36 @@
     "start": "node app.js"
   },
   "dependencies": {
-    "async": "^3.1.0",
-    "bcryptjs": "^2.4.3",
-    "big.js": "^5.2.2",
-    "body-parser": "^1.19.0",
-    "bufferutil": "^4.0.1",
-    "connect-flash": "^0.1.1",
-    "connect-redis": "^4.0.3",
+    "async": "3.1.0",
+    "bcryptjs": "2.4.3",
+    "big.js": "5.2.2",
+    "body-parser": "1.19.0",
+    "bufferutil": "4.0.1",
+    "connect-flash": "0.1.1",
+    "connect-redis": "4.0.3",
     "cookie-parser": "~1.4.4",
-    "csurf": "^1.10.0",
+    "csurf": "1.10.0",
     "debug": "~2.6.9",
-    "express": "^4.18.2",
-    "express-session": "^1.16.2",
-    "fastest-validator": "^1.0.0",
+    "express": "4.18.2",
+    "express-session": "1.16.2",
+    "fastest-validator": "1.0.0",
     "fs": "0.0.1-security",
-    "got": "^11.8.6",
+    "got": "11.8.6",
     "http-errors": "~1.6.3",
-    "i18n-2": "^0.7.3",
-    "ini": "^1.3.5",
-    "ioredis": "^5.3.1",
-    "lodash": "^4.17.15",
-    "mongoose": "^6.10.0",
+    "i18n-2": "0.7.3",
+    "ini": "1.3.5",
+    "ioredis": "5.3.1",
+    "lodash": "4.17.15",
+    "mongoose": "6.10.0",
     "morgan": "~1.9.1",
-    "node-cache": "^5.1.2",
-    "redis": "^4.1.0",
-    "request": "^2.88.0",
-    "sleep-promise": "^9.1.0",
-    "socket.io": "^4.5.1",
+    "node-cache": "5.1.2",
+    "redis": "4.1.0",
+    "request": "2.88.0",
+    "sleep-promise": "9.1.0",
+    "socket.io": "4.5.1",
     "socket.io-express-session": "git+https://github.com/xpepermint/socket.io-express-session.git",
     "twig": "~0.10.3",
-    "utf-8-validate": "^5.0.2",
-    "uuid": "^3.3.2"
+    "utf-8-validate": "5.0.2",
+    "uuid": "3.3.2"
   }
 }
